# rk-input-data-scoring

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/templates/: index.html
models/: train_model.py
