[project]
name = "rk-input-data-scoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.8",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
